--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <title>MyGovernment DocuSign Sample Application</title>
+    <title>MyGovernment Sample Application</title>
   </head>
   <body>
     <div id="root"></div>
