add OG image and text

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="description" content="See how a government agency can leverage DocuSign features such as embedded and remote signing, conditional recipients, branding, document visibility, payment, Identity Verification (IDV), and more." />
+    <meta name="twitter:title" content="MyGovernment DocuSign Sample Application" />
+    <meta name="twitter:description" content="See how a government agency can leverage DocuSign features such as embedded and remote signing, conditional recipients, branding, document visibility, payment, Identity Verification (IDV), and more." />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content=" DocuSign Sample Application" />
+    <meta property="og:description" content="See how a government agency can leverage DocuSign features such as embedded and remote signing, conditional recipients, branding, document visibility, payment, Identity Verification (IDV), and more." />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.jpg" />
+
     <!-- Google Tag Manager -->
     <script>
       (function (w, d, s, l, i) {
