update OG image

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content=" DocuSign Sample Application" />
     <meta property="og:description" content="See how a government agency can leverage DocuSign features such as embedded and remote signing, conditional recipients, branding, document visibility, payment, Identity Verification (IDV), and more." />
-    <meta property="og:image" content="%PUBLIC_URL%/logo.jpg" />
+    <meta property="og:image" content="%PUBLIC_URL%/MyGovernment_OG.png" />
 
     <!-- Google Tag Manager -->
     <script>
