--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <meta name="description" content="See how a government agency can leverage DocuSign features such as embedded and remote signing, conditional recipients, branding, document visibility, payment, Identity Verification (IDV), and more." />
-    <meta name="twitter:title" content="MyGovernment DocuSign Sample Application" />
-    <meta name="twitter:description" content="See how a government agency can leverage DocuSign features such as embedded and remote signing, conditional recipients, branding, document visibility, payment, Identity Verification (IDV), and more." />
+    <meta name="description" content="See how a government agency can leverage Docusign features such as embedded and remote signing, conditional recipients, branding, document visibility, payment, Identity Verification (IDV), and more." />
+    <meta name="twitter:title" content="MyGovernment Docusign Sample Application" />
+    <meta name="twitter:description" content="See how a government agency can leverage Docusign features such as embedded and remote signing, conditional recipients, branding, document visibility, payment, Identity Verification (IDV), and more." />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content=" DocuSign Sample Application" />
-    <meta property="og:description" content="See how a government agency can leverage DocuSign features such as embedded and remote signing, conditional recipients, branding, document visibility, payment, Identity Verification (IDV), and more." />
+    <meta property="og:title" content="MyGovernment Docusign Sample Application" />
+    <meta property="og:description" content="See how a government agency can leverage Docusign features such as embedded and remote signing, conditional recipients, branding, document visibility, payment, Identity Verification (IDV), and more." />
     <meta property="og:image" content="%PUBLIC_URL%/MyGovernment_OG.png" />
 
     <!-- Google Tag Manager -->
